<resources>
    <string name="app_name">Obesencek</string>
    <string name="settings">Settings</string>
    <string name="insertWord">Insert word</string>
    <string name="textViewRecentWords">Recent words:</string>
    <string name="newWord">Type new word here</string>
    <string name="allWords">Show all words</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_newGame">New Game</string>
    <string name="button_continue">Continue</string>
    <string name="button_words">Words</string>
    <string name="title_activity_game">GameActivity</string>
</resources>
