<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextNewWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/newWord"
            android:maxLength="15"
            android:singleLine="true"
            android:inputType="text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonInsert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/insertWord" />

            <Button
                android:id="@+id/buttonShowAll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/allWords"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewYourWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewRecentWords"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewShowWords"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </ScrollView>

    </LinearLayout>

</LinearLayout>
